@@ -2,6 +2,7 @@
 
 - added timeout parameter for requests to the ApacheTika server
 - fallback to local java app if the ApacheTika server request fails or is incomplete
+- catch parser failure and return undef instead of breaking
 
 * v0.3.2
 
